@@ -162,6 +162,7 @@
 		<Unit filename="..\..\..\Source\MediaInfo\Setup.h" />
 		<Unit filename="..\..\..\Source\MediaInfo\Text\File_OtherText.cpp" />
 		<Unit filename="..\..\..\Source\MediaInfo\Text\File_OtherText.h" />
+		<Unit filename="..\..\..\Source\MediaInfo\Video\File_Aic.cpp" />
 		<Unit filename="..\..\..\Source\MediaInfo\Video\File_Avc.cpp" />
 		<Unit filename="..\..\..\Source\MediaInfo\Video\File_Avc.h" />
 		<Unit filename="..\..\..\Source\MediaInfo\Video\File_Flic.cpp" />
