@@ -404,6 +404,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\Source\MediaInfo\Video\File_Aic.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\Source\MediaInfo\Video\File_Avc.cpp"
 					>
 				</File>
@@ -1355,6 +1359,10 @@
 				>
 				<File
 					RelativePath="..\..\..\Source\MediaInfo\Video\File_AfdBarData.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\Source\MediaInfo\Video\File_Aic.h"
 					>
 				</File>
 				<File
