@@ -76,7 +76,7 @@ hdvc;MPEG Video;;;http://www.apple.com/quicktime/download/standalone.html;;;YUV;
 hdvd;MPEG Video;;;http://www.apple.com/quicktime/download/standalone.html;;;YUV;
 hdve;MPEG Video;;;http://www.apple.com/quicktime/download/standalone.html;;;YUV;
 hdvf;MPEG Video;;;http://www.apple.com/quicktime/download/standalone.html;;;YUV;
-icod;Intermediate Codec;Apple;;http://www.apple.com/quicktime/download/standalone.html;;;;
+icod;AIC;;Apple Intermediate Codec;http://www.apple.com/quicktime/download/standalone.html;;;YUV;4:2:0
 j420;YUV;;;;;;YUV;4:2:0
 jpeg;JPEG;;;http://www.apple.com/quicktime/download/standalone.html;;;;
 kpcd;Photo CD;;;;;;;
